--- a/app/src/main/res/layout/fragment_live_data_vm.xml
+++ b/app/src/main/res/layout/fragment_live_data_vm.xml
@@ -19,11 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/main_bg_app_color"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/layout_left_margin"
-            android:paddingTop="16dp"
-            android:paddingEnd="@dimen/layout_right_margin"
-            android:paddingBottom="16dp">
+            android:orientation="vertical">
 
             <androidx.core.widget.NestedScrollView
                 style="@style/NestedScrollBarStyle"
@@ -34,11 +30,14 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:paddingStart="@dimen/layout_left_margin"
+                    android:paddingTop="16dp"
+                    android:paddingEnd="@dimen/layout_right_margin"
+                    android:paddingBottom="16dp">
 
                     <TextView
                         android:id="@+id/team_b_label"
-                        app:layout_constraintTop_toTopOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_bold"
@@ -46,15 +45,16 @@
                         android:textAppearance="?android:textAppearanceLarge"
                         android:textColor="@color/default_content_color"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <RelativeLayout
                         android:id="@+id/team_b_score_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:padding="20dp"
                         android:background="@drawable/circular_white_shape"
+                        android:padding="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/team_b_label">
@@ -76,129 +76,129 @@
                             android:layout_below="@id/team_b_score_label"
                             android:layout_centerHorizontal="true"
                             android:fontFamily="@font/lato_bold"
-                            tools:text="0"
                             android:text="@{String.valueOf(viewModel.scoreB)}"
                             android:textAllCaps="true"
                             android:textAppearance="?android:textAppearanceSmall"
                             android:textColor="@color/button_text_colored"
-                            android:textSize="30sp" />
+                            android:textSize="30sp"
+                            tools:text="0" />
 
                     </RelativeLayout>
 
                     <LinearLayout
+                        android:id="@+id/team_b_score_row"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/team_b_score_row"
                         android:layout_marginTop="16dp"
                         app:layout_constraintTop_toBottomOf="@id/team_b_score_layout">
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/team_b_score_1"
                             android:layout_width="0dp"
-                            android:layout_marginEnd="4dp"
-                            android:onClick="@{() -> viewModel.increaseTeamBScore(1)}"
-                            android:text="@string/_1_point"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_marginEnd="4dp"
+                            android:layout_weight="1"
+                            android:onClick="@{() -> viewModel.increaseTeamBScore(1)}"
+                            android:text="@string/_1_point" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/team_b_score_2"
                             android:layout_width="0dp"
-                            android:layout_marginStart="4dp"
-                            android:onClick="@{() -> viewModel.increaseTeamBScore(2)}"
-                            android:text="@string/_2_points"
-                            android:layout_marginEnd="4dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_marginStart="4dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_weight="1"
+                            android:onClick="@{() -> viewModel.increaseTeamBScore(2)}"
+                            android:text="@string/_2_points" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/team_b_score_3"
                             android:layout_width="0dp"
-                            android:text="@string/_3_points"
-                            android:onClick="@{() -> viewModel.increaseTeamBScore(3)}"
-                            android:layout_marginStart="4dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_marginStart="4dp"
+                            android:layout_weight="1"
+                            android:onClick="@{() -> viewModel.increaseTeamBScore(3)}"
+                            android:text="@string/_3_points" />
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:background="@color/white"
-                        android:layout_marginTop="16dp"
                         android:id="@+id/win_lose_score_row"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/white"
                         android:padding="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/team_b_score_row"
-                        android:layout_height="wrap_content">
+                        app:layout_constraintTop_toBottomOf="@id/team_b_score_row">
 
                         <TextView
                             android:id="@+id/win_score_label"
                             android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:visibility="invisible"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:fontFamily="@font/lato_heavy"
                             android:text="@{viewModel.winScoreLabel}"
                             android:textAllCaps="true"
                             android:textAppearance="?android:textAppearanceMedium"
-                            android:textColor="@color/colorPrimary" />
+                            android:textColor="@color/colorPrimary"
+                            android:visibility="invisible" />
 
                         <TextView
                             android:id="@+id/lose_score_label"
                             android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:visibility="invisible"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:fontFamily="@font/lato_heavy"
                             android:text="@{viewModel.loseScoreLabel}"
                             android:textAllCaps="true"
                             android:textAppearance="?android:textAppearanceMedium"
-                            android:textColor="@android:color/holo_red_light" />
+                            android:textColor="@android:color/holo_red_light"
+                            android:visibility="invisible" />
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/team_a_score_row"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:id="@+id/team_a_score_row"
                         app:layout_constraintTop_toBottomOf="@id/win_lose_score_row">
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/team_a_score_1"
                             android:layout_width="0dp"
-                            android:layout_marginEnd="4dp"
-                            android:onClick="@{() -> viewModel.increaseTeamAScore(1)}"
-                            android:text="@string/_1_point"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_marginEnd="4dp"
+                            android:layout_weight="1"
+                            android:onClick="@{() -> viewModel.increaseTeamAScore(1)}"
+                            android:text="@string/_1_point" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/team_a_score_2"
                             android:layout_width="0dp"
-                            android:layout_marginStart="4dp"
-                            android:onClick="@{() -> viewModel.increaseTeamAScore(2)}"
-                            android:text="@string/_2_points"
-                            android:layout_marginEnd="4dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_marginStart="4dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_weight="1"
+                            android:onClick="@{() -> viewModel.increaseTeamAScore(2)}"
+                            android:text="@string/_2_points" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/team_a_score_3"
                             android:layout_width="0dp"
-                            android:onClick="@{() -> viewModel.increaseTeamAScore(3)}"
-                            android:text="@string/_3_points"
-                            android:layout_marginStart="4dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:layout_marginStart="4dp"
+                            android:layout_weight="1"
+                            android:onClick="@{() -> viewModel.increaseTeamAScore(3)}"
+                            android:text="@string/_3_points" />
                     </LinearLayout>
 
                     <RelativeLayout
                         android:id="@+id/team_a_score_layout"
                         android:layout_width="wrap_content"
-                        android:orientation="vertical"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:padding="20dp"
                         android:background="@drawable/circular_white_shape"
+                        android:orientation="vertical"
+                        android:padding="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/team_a_score_row">
@@ -221,11 +221,11 @@
                             android:layout_centerHorizontal="true"
                             android:fontFamily="@font/lato_bold"
                             android:text="@{String.valueOf(viewModel.scoreA)}"
-                            tools:text="0"
                             android:textAllCaps="true"
                             android:textAppearance="?android:textAppearanceSmall"
                             android:textColor="@color/button_text_colored"
-                            android:textSize="30sp" />
+                            android:textSize="30sp"
+                            tools:text="0" />
 
                     </RelativeLayout>
 
@@ -233,43 +233,47 @@
                         android:id="@+id/team_a_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
                         android:fontFamily="@font/lato_bold"
                         android:text="@string/team_a"
                         android:textAppearance="?android:textAppearanceLarge"
                         android:textColor="@color/default_content_color"
-                        android:layout_marginBottom="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/team_a_score_layout"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/team_a_score_layout" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.core.widget.NestedScrollView>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="@color/about_content_color"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/layout_left_margin"
                 android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_height="wrap_content">
+                android:layout_marginEnd="@dimen/layout_right_margin"
+                android:layout_marginBottom="16dp"
+                android:background="@color/about_content_color"
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/start_game_btn"
                     android:layout_width="0dp"
-                    android:background="@color/transparent"
-                    android:layout_marginEnd="4dp"
-                    android:onClick="@{() -> viewModel.startGame()}"
-                    android:text="@string/start"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginEnd="4dp"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:onClick="@{() -> viewModel.startGame()}"
+                    android:text="@string/start" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/stop_game_btn"
                     android:layout_width="0dp"
-                    android:text="@string/stop"
-                    android:onClick="@{() -> viewModel.stopGame()}"
-                    android:background="@color/transparent"
-                    android:layout_marginStart="4dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:onClick="@{() -> viewModel.stopGame()}"
+                    android:text="@string/stop" />
             </LinearLayout>
         </LinearLayout>
 
